--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
-      <header>
-        <h2></h2>
-        <p>Lorem, ipsum.</p>
-      </header>
-    </main>
+    <header>
+      <h1></h1>
+      <p>Lorem, ipsum.</p>
+    </header>
+    <main></main>
   </body>
 </html>
