--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <h1></h1>
-      <p>Lorem, ipsum.</p>
+      <svg width="400" height="200" viewBox="0 0 800 400">
+        <circle r="75" cx="50%" cy="50%" fill="tomato" />
+      </svg>
     </header>
     <main></main>
   </body>
